[package]
name = "game-server"
version = "0.1.0"
authors = ["C-Jameson <booksncode@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
warp = "0.3"
futures = "0.3.14"
tokio-stream = "0.1.5"
tokio-postgres = "0.7.2"
deadpool-postgres = "0.7.0"
uuid = { version = "0.8.2", features = ["v4"] }
rust-argon2 = "0.8.3"
getrandom = "0.2.2"